[tool.poetry]
name = "foursight-core"
version = "3.0.0.1b29"
description = "Serverless Chalice Application for Monitoring"
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
packages = [
  { include = "foursight_core" },
  { include = "checks", from = "foursight_core" },
  { include = "helpers", from = "foursight_core/checks" }
]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
dcicutils = "^6.0.0"
click = "^7.1.2"
cron-descriptor = "^1.2.31"
pyDes = "^2.0.1"
PyJWT = "2.5.0"
Jinja2 = "2.10.1"
MarkupSafe = "1.1.1"
google = "^3.0.0"
google-auth-oauthlib = "^0.7.0"
google-api-python-client = "^1.12.5"
geocoder = "1.38.1"
elasticsearch = "7.13.4"
elasticsearch-dsl = "^7.0.0"
gitpython = "^3.1.2"
pytz = "^2020.1"

[tool.poetry.dev-dependencies]
chalice = "^1.21.4"
flake8 = ">=3.9.2"
pytest = "5.1.2"
pytest-cov = "2.7.1"
flaky = "3.6.1"

[tool.poetry.scripts]
encrypt-accounts-file = "foursight_core.scripts.encrypt_accounts_file:main"
decrypt-accounts-file = "foursight_core.scripts.decrypt_accounts_file:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
